--- a/27tutorialSite.html
+++ b/27tutorialSite.html
@@ -11,8 +11,8 @@
         <tr>
             <td width="20%">
                 <ul>
-                    <li><a target="HTML" href="../01terminologies.html">Basic Terminologies</a></li>
-                    <li><a target="HTML" href="../02html intro.html">HTML Intro</a></li>
+                    <li><a target="My Frame" href="./01terminologies.html">Basic Terminologies</a></li>
+                    <li><a target="Mt Frame" href="./02html intro.html">HTML Intro</a></li>
                 </ul>
             </td>
             <td>
