--- a/JavaScript/Slider/Slider.html
+++ b/JavaScript/Slider/Slider.html
@@ -50,9 +50,11 @@
     <div class="slides">
       <img src="./assets/img1.jpg" alt="Image 1">
       <img src="./assets/img2.jpg" alt="Image 2">
-      <img src="./assets/img3.jpg" alt="Image 3">
+      <img src="./assets/img3.JPG" alt="Image 3">
+      <img src="./assets/img4.jpg" alt="Image 4">
+      <img src="./assets/img5.webp" alt="Image 5">
     </div>
-    <button class="prev">Previous</button>
+    <button class="prev">Previous</button>           
     <button class="next">Next</button>
   </div>
 
